--- a/chrome_ext/newtab.html
+++ b/chrome_ext/newtab.html
@@ -5,7 +5,7 @@
   </head>
   <body>
       Test tes tes tes
-
+      <button id="changeColor"></button>
       boom boom
     <h1>Hello World!</h1>
     <div id="test"></div>
