--- a/chrome_ext/options.html
+++ b/chrome_ext/options.html
@@ -8,10 +8,27 @@
         outline: none;
         margin: 10px;
       }
+      body {
+        background-color: #0080a8;
+        display: inline-block;
+        background-color: #0080a8;
+        width: 100%;
+        text-align: center;
+      }
+      h1,a {
+      color: white;
+      margin-top: 20%;
+      text-align: center;
+      }
+      a {
+        font-size: 2em;
+      }
     </style>
   </head>
   <body>
- 
+ <H1>You can find me on twitter for any requests! </H1>
+ <br>
+ <a href="https://twitter.com/DJFreshUK">twitter.com/DJFreshUK</a>
   </body>
   <script src="options.js"></script>
 </html>
